--- a/front/src/SCSS/ProfilePage/ProfileHeader.scss
+++ b/front/src/SCSS/ProfilePage/ProfileHeader.scss
@@ -68,6 +68,9 @@
   .profile__last-access {
     color: $lightGrey;
     font-weight: $normal;
+    .profile__online {
+      color: $pointBlue;
+    }
   }
 }
 
@@ -107,6 +110,63 @@
     font-weight: $normal;
     margin-right: 1rem;
   }
+  .row1__unfollow {
+    background-color: $bodyColor;
+    color: $darkGrey;
+    box-shadow: none;
+    border: 1px solid $lightestGrey;
+    padding: 0 1.2rem;
+  }
+  .unfollow__alert {
+    position: absolute;
+    box-shadow: rgba(0, 0, 0, 0.5) 0 0 0 9999px;
+    border-radius: $round;
+    top: 50%;
+    left: 50%;
+    margin: -10rem 0 0 -10rem;
+    z-index: 3;
+    width: 20rem;
+    height: 20rem;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    .unfollow__img {
+      width: 6rem;
+      height: 6rem;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-top: 1rem;
+    }
+    .unfollow__user {
+      font-weight: $bold;
+    }
+    .unfollow__desc {
+      line-height: normal;
+      margin-bottom: 0;
+    }
+    .unfollow__unfollow {
+      width: 100%;
+      color: $pointRed;
+      font-weight: $normal;
+      cursor: pointer;
+    }
+    .unfollow__cancel {
+      cursor: pointer;
+      width: 100%;
+    }
+    hr {
+      width: 100%;
+      margin: 0;
+    }
+    div {
+      padding: 0 1rem;
+      margin: 1rem 0;
+    }
+  }
+
   .row1__edit-profile {
     background-color: $bodyColor;
     color: $black;
