feat: #226 show followlist on logout

--- a/front/src/SCSS/ProjectEditPage/ProjectEditPage.scss
+++ b/front/src/SCSS/ProjectEditPage/ProjectEditPage.scss
@@ -68,7 +68,8 @@
   }
 }
 
-// .markdown__editor {
-//   border-radius: $round;
-//   color: $lightGrey;
+/* Toast-UI editor */
+// .toastui-editor-defaultUI {
+//   border: 2px solid $mainColor !important;
+//   border-radius: $round !important;
 // }
