feat: #193 profileEditPage version2

--- a/front/src/SCSS/ProfilePage/ProfileBody.scss
+++ b/front/src/SCSS/ProfilePage/ProfileBody.scss
@@ -165,3 +165,12 @@ input.github-span {
 .projects__list {
   display: flex;
 }
+
+@media (max-width: 1000px) {
+  .profileBody__col1,
+  .profileBody__col2 {
+    // flex-direction: row !important;
+    // align-items: flex-start !important;
+    width: 80%;
+  }
+}
