--- a/front/src/SCSS/ProjectEditPage/PositionCard.scss
+++ b/front/src/SCSS/ProjectEditPage/PositionCard.scss
@@ -2,8 +2,7 @@
 
 .positionCard {
   padding: 0.5rem;
-  //   background-color: pink;
-  max-width: max-content;
+  width: 6rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -13,10 +12,18 @@
     border-radius: 50%;
     margin-bottom: 0.5rem;
   }
+  img.positionCard__img {
+    border-radius: 50%;
+    width: 3.7rem;
+    height: 3.7rem;
+    object-fit: cover;
+    margin-bottom: 0.5rem;
+  }
   .positionCard__select {
     background-color: $lightestGrey;
     display: flex;
-    padding: 0.1rem 0.3rem;
+    height: 1.3rem;
+    padding: 0 0.3rem;
     border-radius: 2rem;
     justify-content: space-between;
     align-items: center;
