feat: #265 Fix chat Err

--- a/front/src/SCSS/Common/Navbar/Navbar.scss
+++ b/front/src/SCSS/Common/Navbar/Navbar.scss
@@ -121,7 +121,7 @@
     height: 1.3rem;
     border-radius: 50%;
     font-weight: 600;
-    background-color: $lightestGrey;
+    background-color: $lightGrey;
     color: white;
     left: 0.9rem;
     top: -0.2rem;
