--- a/front/src/SCSS/Common/Chat/InChat.scss
+++ b/front/src/SCSS/Common/Chat/InChat.scss
@@ -26,6 +26,19 @@
         margin-right: 1rem;
       }
     }
+    .btn {
+      padding: 0;
+      margin: 0.5rem;
+      position: absolute;
+      right: 1.5rem;
+      box-shadow: none;
+      .inChat__menu-icon {
+        font-size: $fontMd;
+        &:hover {
+          color: $mainColor;
+        }
+      }
+    }
     .close {
       position: absolute;
       right: 0;
