--- a/front/src/SCSS/MainPage/DashCards.scss
+++ b/front/src/SCSS/MainPage/DashCards.scss
@@ -12,6 +12,7 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 1rem;
+    width: max-content;
     img {
       border-radius: $round;
       object-fit: cover;
