--- a/front/src/SCSS/ProjectEditPage/Unsplash.scss
+++ b/front/src/SCSS/ProjectEditPage/Unsplash.scss
@@ -7,9 +7,11 @@
   width: 25rem;
   height: 35rem;
   position: absolute;
-  top: 0;
-  left: 19rem;
+  top: 9.5rem;
+  left: 28rem;
   z-index: 3;
+  display: flex;
+  flex-direction: column;
   .unsplash__header {
     display: flex;
     justify-content: space-between;
@@ -44,8 +46,29 @@
     .upload-icon {
       margin-right: 0.3rem;
     }
-    .tab__presets {
+    .tab__upload {
       color: $darkGrey;
     }
+  }
+  .unsplash__body {
+    padding: 1rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .unsplash__button {
+    background-color: $lightestGrey;
+    border: none;
+    cursor: default;
+    width: 5rem;
+  }
+  .unsplash__button-active {
+    background-color: $mainColor;
+    border: none;
+    color: white;
+    width: 5rem;
   }
 }
