--- a/front/src/SCSS/ProjectEditPage/ProjectEditPage.scss
+++ b/front/src/SCSS/ProjectEditPage/ProjectEditPage.scss
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
   input,
   textarea {
     border: 2px solid $lightestGrey;
@@ -114,6 +115,7 @@
 .project-edit__left {
   width: 40%;
   // background-color: pink;
+  position: relative;
   .project-edit__position-label {
     display: flex;
     align-items: baseline;
@@ -170,6 +172,12 @@
   }
   .project-edit__name {
     width: 26.5rem;
+  }
+  .title__letters-count {
+    position: relative;
+    right: -27rem;
+    bottom: 1.2rem;
+    color: $lightGrey;
   }
 }
 
