--- a/front/src/SCSS/MainPage/List.scss
+++ b/front/src/SCSS/MainPage/List.scss
@@ -4,8 +4,8 @@
   display: flex;
   justify-content: center;
   padding: 8rem;
-  font-weight: $bold;
-  opacity: 0.7;
+  font-weight: $semiBold;
+  opacity: 0.5;
 }
 .cardlist {
   display: flex;
