feat : #243 Fix CSS and Token settings in Project detail page
- 프로젝트 상세페이지에서 새롭게 수정된 토큰 설정을 적용함.

- 프로젝트 상세페이지의 댓글 및 프로젝트 설명 부분의 min-height을
  적용함.

--- a/front/src/SCSS/ProjectDetail/ProjectComment.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectComment.scss
@@ -8,18 +8,26 @@
   border-radius: $round;
   // border: 1px solid black;
   background: white;
-  .comment-list {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    .comment-id {
-      font-size: $fontMs;
-      margin: 0.5rem;
+  .comment_main {
+    min-height: 10rem;
+    .comment-list {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      text-align: center;
+      .comment-id {
+        font-size: $fontMs;
+        margin: 0.5rem;
+      }
+      .comment-content {
+        margin: 0.5rem;
+      }
     }
-    .comment-content {
+    .empty-comment {
       margin: 0.5rem;
     }
   }
+
   .comment-row {
     display: flex;
     flex-direction: row;
