--- a/front/src/SCSS/ProjectDetail/MemberList.scss
+++ b/front/src/SCSS/ProjectDetail/MemberList.scss
@@ -43,46 +43,55 @@
         background-color: $mainColor;
       }
     }
-    .empty_member {
-      margin: 0.5rem;
+    .empty_list {
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-      .plus_icon {
-        position: absolute;
-        right: 0.5rem;
-        top: -0.5rem;
-        background-color: white;
-        border-radius: 50%;
-        box-shadow: $shadow;
-      }
-      .apply_pop {
-        position: absolute;
-        background-color: white;
-        border-radius: 50%;
-        box-shadow: $shadow;
-      }
-      .chair_icon {
-        svg {
+      flex-direction: row;
+      .empty_member {
+        margin: 0.5rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        .plus_icon {
+          cursor: pointer;
+          transition: width 300ms ease;
+          position: absolute;
+          right: 0.5rem;
+          top: -0.5rem;
+          background-color: white;
           border-radius: 50%;
-          width: 6rem;
-          height: 6rem;
-          object-fit: cover;
-          border-radius: 50%;
-          border: 1px solid #c4c4c4;
+          box-shadow: $shadow;
         }
-      }
-      .empty_position {
-        margin-top: 5px;
-        width: 5rem;
-        height: 1rem;
-        border-radius: 2rem;
-        color: white;
-        font-size: $fontSm;
-        text-align: center;
-        background-color: #c4c4c4;
+        .plus_icon:hover {
+          transform: scale(1.1);
+        }
+        .apply_pop {
+          position: absolute;
+          background-color: white;
+          border-radius: 50%;
+          box-shadow: $shadow;
+        }
+        .chair_icon {
+          svg {
+            border-radius: 50%;
+            width: 6rem;
+            height: 6rem;
+            object-fit: cover;
+            border-radius: 50%;
+            border: 1px solid #c4c4c4;
+          }
+        }
+        .empty_position {
+          margin-top: 5px;
+          width: 5rem;
+          height: 1rem;
+          border-radius: 2rem;
+          color: white;
+          font-size: $fontSm;
+          text-align: center;
+          background-color: #c4c4c4;
+        }
       }
     }
   }
