--- a/front/src/SCSS/ProjectDetail/ProjectContent.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectContent.scss
@@ -1,7 +1,7 @@
 @import "../Base.scss";
 
 .project_content {
-  min-height: 30rem;
+  // min-height: 15rem;
   margin: 1.5rem 1rem 1rem 0rem;
   .project_content_row1 {
     display: flex;
