--- a/front/src/SCSS/ProjectDetail/ProjectDetail.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectDetail.scss
@@ -3,6 +3,8 @@
 .ProjectDetail__wrap {
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
+  max-width: 1440px;
 }
 
 // .projectdetail-header {
@@ -19,12 +21,13 @@
   display: flex;
   border-radius: $round;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .projectdetail-body__row1 {
   display: flex;
   flex-direction: column;
-  width: 30%;
+  width: 29%;
   // padding: 10px;
   // margin: 10px;
   // border-radius: $round;
@@ -34,7 +37,7 @@
     padding: 100px;
     justify-content: center;
     border-radius: $round;
-    margin: 10px;
+    // margin: 10px;
     // border: 1px solid black;
     background: $mainColor;
   }
@@ -68,7 +71,7 @@
   width: 70%;
   min-width: max-content;
   flex-direction: column;
-  margin: 10px;
+  margin: 0.5rem 0;
   padding: 2.5rem;
   // border: 1px solid black;
   background-color: white;
