--- a/front/src/SCSS/ProjectDetail/ProjectInfo.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectInfo.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   padding: 1.5rem;
-  margin: 0.5rem;
+  margin: 0.5rem 0;
   box-shadow: $shadow;
   border-radius: $round;
   background: white;
