--- a/front/src/SCSS/ProjectDetail/ProjectStatus.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectStatus.scss
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
   border-radius: $round;
-  margin: 0.5rem;
+  margin: 0.5rem 0;
   background: $mainColor;
   .status_title {
     color: white;
