--- a/front/src/SCSS/MainPage/Dashboard.scss
+++ b/front/src/SCSS/MainPage/Dashboard.scss
@@ -106,6 +106,9 @@
           margin: 0.5rem 0.4rem;
           margin-top: 0rem;
         }
+        .not-skills {
+          margin-left: 1rem;
+        }
       }
     }
   }
