--- a/front/src/SCSS/MainPage/Cards.scss
+++ b/front/src/SCSS/MainPage/Cards.scss
@@ -15,20 +15,37 @@
   // min-width: 22rem;
   .card__image {
     position: relative;
+    border-radius: $round;
+    width: 18rem;
+    height: 11.5rem;
+    background-color: #808080;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 1rem;
+    .card__new-tag {
+      position: absolute;
+      right: -0.7rem;
+      top: 0.7rem;
+      background-color: $pointRed;
+      z-index: 1;
+      padding: 0.3rem 0.5rem;
+      color: white;
+      font-weight: $semiBold;
+      border-radius: 0.4rem;
+      font-size: $fontSs;
+    }
     img {
       border-radius: $round;
       object-fit: cover; // 이미지 안찌그러지면서 꽉차게
-      width: 18rem;
-      height: 11.5rem;
+      width: 100%;
+      height: 100%;
       filter: brightness(50%);
     }
     .image__title {
       width: 18rem;
       position: absolute;
+      line-height: 120%;
       color: $lightestGrey;
       font-weight: $normal;
       bottom: 2rem;
@@ -40,6 +57,7 @@
       white-space: -pre-wrap; /* Opera 4-6 */
       white-space: -o-pre-wrap; /* Opera 7 */
       word-wrap: break-all; /* Internet Explorer 5.5+ */
+      font-size: 1.2rem;
     }
   }
   .card__info {
