--- a/front/src/SCSS/MainPage/Lounge.scss
+++ b/front/src/SCSS/MainPage/Lounge.scss
@@ -28,32 +28,44 @@
         align-items: center;
         .row1__image {
           border-radius: 50%;
-          width: 3rem;
-          height: 3rem;
+          width: 2.5rem;
+          height: 2.5rem;
           object-fit: cover;
           // margin-bottom: 0.5rem;
           margin-right: 1rem;
         }
-        .row1__name {
-          position: relative;
-          font-weight: $normal;
-          margin-bottom: 0.3rem;
-        }
-        .row1__time {
-          font-size: $fontSs;
-          color: $grey;
+        .row1__right {
+          display: flex;
+          width: 100%;
+          justify-content: space-between;
+          align-items: center;
+          .row1__name {
+            position: relative;
+            font-weight: $normal;
+          }
+          .row1__time {
+            font-size: $fontSs;
+            color: $grey;
+          }
         }
       }
       .card__row2 {
-        padding-left: 4rem;
+        padding-left: 3.5rem;
         margin-bottom: 1rem;
       }
       .card__row3 {
         position: absolute;
+        font-size: $fontSs;
         right: 1rem;
         bottom: 1rem;
+        .row3-icon {
+          font-size: $fontSm;
+          position: relative;
+          bottom: 0.1rem;
+          right: 0.1rem;
+        }
         .like-num {
-          margin-right: 1rem;
+          margin-right: 0.5rem;
         }
       }
     }
